# SDLC

./: shell_exec.py
prompts/: TOOLS_PROMPTS_GUIDE.md
server_Jenkins/: Dockerfile  build_me.bat  run_me.bat
server_mlflow/: pyproject.toml  run_me.bat
servers_MCP/server_dummy/: pyproject.toml  server.py
servers_MCP/server_github_remote/: pyproject.toml  server.py
servers_MCP/server_mlflow/: config.py  pyproject.toml  server.py  tools_MLflower.py
servers_MCP/servers_common/: setup_me.bat
